--- a/OpenAPI-Language/appsettings.json
+++ b/OpenAPI-Language/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "OpenAI": {
-    "Key": "/"
+    "Key": "sk-proj-mcqwMmRVPDst92VoHbyuT3BlbkFJh0WG4iAFktfl5KWD6st9"
   }
 }
