--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,21 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+Backend/.vs/Backend/DesignTimeBuild/.dtbcache.v2
+Backend/.vs/Backend/v17/.suo
+Backend/.vs/Backend/v17/DocumentLayout.json
+Backend/Backend/bin/Debug/net8.0/Backend.dll
+Backend/Backend/bin/Debug/net8.0/Backend.exe
+Backend/Backend/bin/Debug/net8.0/Backend.pdb
+Backend/Backend/obj/Debug/net8.0/ref/Backend.dll
+Backend/Backend/obj/Debug/net8.0/Backend.sourcelink.json
+Backend/Backend/obj/Debug/net8.0/Backend.pdb
+Backend/Backend/obj/Debug/net8.0/Backend.dll
+Backend/Backend/obj/Debug/net8.0/Backend.AssemblyInfoInputs.cache
+Backend/Backend/obj/Debug/net8.0/Backend.AssemblyInfo.cs
+Backend/Backend/obj/Debug/net8.0/apphost.exe
+Backend/Backend/obj/Debug/net8.0/refint/Backend.dll
+Backend/Backend/obj/Debug/net8.0/refint/Backend.dll
+Backend/Backend/obj/Debug/net8.0/Backend.AssemblyInfo.cs
+Backend/Backend/obj/Debug/net8.0/Backend.AssemblyInfoInputs.cache
+Backend/.vs/Backend/DesignTimeBuild/.dtbcache.v2
