Promenio sam nesto

--- a/.gitignore
+++ b/.gitignore
@@ -429,3 +429,4 @@ Backend/Backend/obj/Debug/net8.0/Backend.pdb
 Backend/Backend/obj/Debug/net8.0/Backend.sourcelink.json
 Backend/Backend/obj/Debug/net8.0/ref/Backend.dll
 Backend/Backend/obj/Debug/net8.0/refint/Backend.dll
+model/datasets/sorted
